--- a/01-intro-to-html/index.html
+++ b/01-intro-to-html/index.html
@@ -10,5 +10,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Intro to HTML</title>
   </head>
-  <body></body>
+  <body>
+    <!-- ============= -->
+    <!-- Basic Content -->
+    <!-- ============= -->
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, fugit!
+
+    <!-- ============= -->
+    <!-- Headings -->
+    <!-- ============= -->
+    <h1>Lorem</h1>
+    <h2>Lorem</h2>
+    <h3>Lorem</h3>
+    <h4>Lorem</h4>
+    <h5>Lorem</h5>
+    <h6>Lorem</h6>
+
+    <!-- ============= -->
+    <!-- Paragraphs -->
+    <!-- ============= -->
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ipsum
+      tempora illo. Itaque magni adipisci tenetur assumenda, optio mollitia?
+      Error.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ipsum
+      tempora illo. Itaque magni adipisci tenetur assumenda, optio mollitia?
+      Error.
+    </p>
+
+    <!-- ============= -->
+    <!-- Lists -->
+    <!-- ============= -->
+    <ul>
+      <li>Lorem, ipsum dolor.</li>
+      <li>Lorem, ipsum.</li>
+      <li>Lorem.</li>
+      <li>Lorem ipsum dolor sit.</li>
+    </ul>
+
+    <ol>
+      <li>Lorem, ipsum dolor.</li>
+      <li>Lorem, ipsum.</li>
+      <li>Lorem.</li>
+      <li>Lorem ipsum dolor sit.</li>
+    </ol>
+
+    <dl>
+      <dt>Title</dt>
+      <dd>Lorem, ipsum dolor.</dd>
+      <dd>Lorem, ipsum.</dd>
+      <dd>Lorem.</dd>
+      <dd>Lorem ipsum dolor sit.</dd>
+    </dl>
+
+    <ol>
+      <li>
+        Lorem.
+        <ul>
+          <li>Lorem, ipsum.</li>
+          <li>Lorem, ipsum.</li>
+          <li>Lorem, ipsum.</li>
+        </ul>
+      </li>
+      <li>Lorem.</li>
+      <li>Lorem.</li>
+      <li>
+        Lorem.
+        <ul>
+          <li>Lorem, ipsum.</li>
+          <li>Lorem, ipsum.</li>
+          <li>Lorem, ipsum.</li>
+          <li>Lorem, ipsum.</li>
+          <li>Lorem, ipsum.</li>
+        </ul>
+      </li>
+    </ol>
+  </body>
 </html>
