--- a/01-intro-to-html/index.html
+++ b/01-intro-to-html/index.html
@@ -11,81 +11,13 @@
     <title>Intro to HTML</title>
   </head>
   <body>
-    <!-- ============= -->
-    <!-- Basic Content -->
-    <!-- ============= -->
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, fugit!
-
-    <!-- ============= -->
-    <!-- Headings -->
-    <!-- ============= -->
-    <h1>Lorem</h1>
-    <h2>Lorem</h2>
-    <h3>Lorem</h3>
-    <h4>Lorem</h4>
-    <h5>Lorem</h5>
-    <h6>Lorem</h6>
-
-    <!-- ============= -->
-    <!-- Paragraphs -->
-    <!-- ============= -->
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ipsum
-      tempora illo. Itaque magni adipisci tenetur assumenda, optio mollitia?
-      Error.
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ipsum
-      tempora illo. Itaque magni adipisci tenetur assumenda, optio mollitia?
-      Error.
-    </p>
-
-    <!-- ============= -->
-    <!-- Lists -->
-    <!-- ============= -->
-    <ul>
-      <li>Lorem, ipsum dolor.</li>
-      <li>Lorem, ipsum.</li>
-      <li>Lorem.</li>
-      <li>Lorem ipsum dolor sit.</li>
-    </ul>
-
-    <ol>
-      <li>Lorem, ipsum dolor.</li>
-      <li>Lorem, ipsum.</li>
-      <li>Lorem.</li>
-      <li>Lorem ipsum dolor sit.</li>
-    </ol>
-
+    <h1>Intro to HTML</h1>
     <dl>
-      <dt>Title</dt>
-      <dd>Lorem, ipsum dolor.</dd>
-      <dd>Lorem, ipsum.</dd>
-      <dd>Lorem.</dd>
-      <dd>Lorem ipsum dolor sit.</dd>
+      <dt>Content:</dt>
+      <dd><a href="./basics.html">Basics</a></dd>
+      <dd>
+        <a href="./links-headings-images.html">Links, Headings & Images</a>
+      </dd>
     </dl>
-
-    <ol>
-      <li>
-        Lorem.
-        <ul>
-          <li>Lorem, ipsum.</li>
-          <li>Lorem, ipsum.</li>
-          <li>Lorem, ipsum.</li>
-        </ul>
-      </li>
-      <li>Lorem.</li>
-      <li>Lorem.</li>
-      <li>
-        Lorem.
-        <ul>
-          <li>Lorem, ipsum.</li>
-          <li>Lorem, ipsum.</li>
-          <li>Lorem, ipsum.</li>
-          <li>Lorem, ipsum.</li>
-          <li>Lorem, ipsum.</li>
-        </ul>
-      </li>
-    </ol>
   </body>
 </html>
