feat: html extras

--- a/01-intro-to-html/index.html
+++ b/01-intro-to-html/index.html
@@ -18,6 +18,9 @@
       <dd>
         <a href="./links-headings-images.html">Links, Headings & Images</a>
       </dd>
+      <dd>
+        <a href="./extras.html">Extras</a>
+      </dd>
     </dl>
   </body>
 </html>
