--- a/01-intro-to-html/links-headings-images.html
+++ b/01-intro-to-html/links-headings-images.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Links, Headings & Images</title>
+    <title>HTML Links, Headings & Images</title>
   </head>
   <body>
     <a href="./index.html">Go back</a>
@@ -23,7 +23,6 @@
     <!-- ============= -->
     <!-- Headings -->
     <!-- ============= -->
-
     <!-- More and more specifics -->
     <h1>Main title</h1>
     <h2>My Fav links</h2>
@@ -31,16 +30,16 @@
     <h4>My Fav classical music linkss</h4>
     <h5>My Fav Bethoven music links</h5>
     <h6>My Fav Bethoven's 9th Symphony website link</h6>
-  </body>
 
-  <!-- ============= -->
-  <!-- Images -->
-  <!-- ============= -->
-  <img
-    height="300"
-    src="https://cdn.pixabay.com/photo/2019/08/07/14/11/dog-4390885_1280.jpg"
-    alt="Cute dog"
-    title="Cute dog"
-  />
-  <img height="300" src="./dog.webp" alt="Cute dog" title="Cute dog" />
+    <!-- ============= -->
+    <!-- Images -->
+    <!-- ============= -->
+    <img
+      height="300"
+      src="https://cdn.pixabay.com/photo/2019/08/07/14/11/dog-4390885_1280.jpg"
+      alt="Cute dog"
+      title="Cute dog"
+    />
+    <img height="300" src="./dog.webp" alt="Cute dog" title="Cute dog" />
+  </body>
 </html>
