feat: add html exercise

--- a/01-intro-to-html/index.html
+++ b/01-intro-to-html/index.html
@@ -21,6 +21,9 @@
       <dd>
         <a href="./extras.html">Extras</a>
       </dd>
+      <dd>
+        <a href="./practice.html">Practice</a>
+      </dd>
     </dl>
   </body>
 </html>
