feat: css flexbox

--- a/01-intro-to-html/02_links-headings-images.html
+++ b/01-intro-to-html/02_links-headings-images.html
@@ -40,6 +40,6 @@
       alt="Cute dog"
       title="Cute dog"
     />
-    <img height="300" src="./dog.webp" alt="Cute dog" title="Cute dog" />
+    <img height="300" src="./images/dog.webp" alt="Cute dog" title="Cute dog" />
   </body>
 </html>
