--- a/01-intro-to-html/index.html
+++ b/01-intro-to-html/index.html
@@ -14,15 +14,15 @@
     <h1>Intro to HTML</h1>
     <dl>
       <dt>Content:</dt>
-      <dd><a href="./basics.html">Basics</a></dd>
+      <dd><a href="./01_basics.html">Basics</a></dd>
       <dd>
-        <a href="./links-headings-images.html">Links, Headings & Images</a>
+        <a href="./02_links-headings-images.html">Links, Headings & Images</a>
       </dd>
       <dd>
-        <a href="./extras.html">Extras</a>
+        <a href="./03_extras.html">Extras</a>
       </dd>
       <dd>
-        <a href="./practice.html">Practice</a>
+        <a href="./04_practice.html">Practice</a>
       </dd>
     </dl>
   </body>
