--- a/03-html-forms/forms.html
+++ b/03-html-forms/forms.html
@@ -13,30 +13,62 @@
           Fill out the form below to place an order for an alien abduction by
           one of our fine UFOs.
         </p>
-        <h2>Your contact information</h2>
-        <p>Your name</p>
-        <p>Phone number</p>
-        <p>Email</p>
+        <form>
+          <fieldset>
+            <legend>Your contact information</legend>
+            <label for="name">Your name</label>
+            <input type="text" id="name" name="name" />
+            <label for="phone">Phone number</label>
+            <input type="tel" id="phone" name="phone" />
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" />
+          </fieldset>
 
-        <h2>About your abduction</h2>
-        <p>Requested date</p>
-        <p>How many people would you like abducted?</p>
-        <p>What type of UFO do you prefer?</p>
-        <ul>
-          <li>Classic oval UFO</li>
-          <li>Star Wars-style Imperial cruiser</li>
-          <li>Battlestar Galactica-style Viper</li>
-          <li>Borg-style cube</li>
-        </ul>
-        <p>What type of abduction experience do you want?</p>
-        <ul>
-          <li>Tour of the solar system</li>
-          <li>Alien dinner and discussion</li>
-          <li>Alien dance lessons</li>
-          <li>Whale watching</li>
-        </ul>
-        <p>Special requests:</p>
-        <p>Add me to your email list</p>
+          <fieldset>
+            <legend>About your abduction</legend>
+            <label for="date">Requested date</label>
+            <input type="date" id="date" name="date" />
+            <label for="qty">How many people would you like abducted?</label>
+            <input type="number" id="qty" name="qty" min="1" max="10" />
+            <p>What type of UFO do you prefer?</p>
+            <label>
+              <input type="radio" name="ufotype" value="classic" />
+              Classic oval UFO
+            </label>
+            <label>
+              <input type="radio" name="ufotype" value="starwars" />
+              Star Wars-style Imperial cruiser
+            </label>
+            <label>
+              <input type="radio" name="ufotype" value="galactica" />
+              Battlestar Galactica-style Viper
+            </label>
+            <label>
+              <input type="radio" name="ufotype" value="borg" />
+              Borg-style cube
+            </label>
+            <label for="abtype"
+              >What type of abduction experience do you want?</label
+            >
+            <select id="abtype" name="abtype">
+              <option selected>Select one...</option>
+              <option value="tour">Tour of the solar system</option>
+              <option value="dinner">Alien dinner and discussion</option>
+              <option value="dance">Alien dance lessons</option>
+              <option value="whale">Whale watching</option>
+            </select>
+            <label id="comments">Special requests:</label>
+            <textarea id="comments" name="comments"></textarea>
+            <label for="subscribe">Add me to your email list</label>
+            <input
+              id="subscribe"
+              type="checkbox"
+              name="subscribe"
+              value="subscribe"
+              checked
+            />
+          </fieldset>
+        </form>
       </section>
       <aside>
         <h3>Our Location</h3>
