feat: form styles

--- a/03-html-forms/forms.html
+++ b/03-html-forms/forms.html
@@ -61,14 +61,16 @@
             </select>
             <label for="comments">Special requests:</label>
             <textarea id="comments" name="comments"></textarea>
-            <label for="subscribe">Add me to your email list</label>
-            <input
-              id="subscribe"
-              type="checkbox"
-              name="subscribe"
-              value="subscribe"
-              checked
-            />
+            <label
+              >Add me to your email list
+              <input
+                id="subscribe"
+                type="checkbox"
+                name="subscribe"
+                value="subscribe"
+                checked
+              />
+            </label>
           </fieldset>
           <input type="hidden" name="send_to" value="kamil.herma01@gmail.com" />
           <button type="submit">Submit</button>
