feat: css layout

--- a/calculator-project/calculator.html
+++ b/calculator-project/calculator.html
@@ -7,8 +7,36 @@
   </head>
   <body>
     <div class="wrapper">
-      <section class="screen"></section>
-      <section class="calc-buttons"></section>
+      <section class="screen">0</section>
+      <section class="calc-buttons">
+        <div class="calc-button-row">
+          <button class="calc-btn double">C</button>
+          <button class="calc-btn">&#8592;</button>
+          <button class="calc-btn">&#247;</button>
+        </div>
+        <div class="calc-button-row">
+          <button class="calc-btn">7</button>
+          <button class="calc-btn">8</button>
+          <button class="calc-btn">9</button>
+          <button class="calc-btn">&#215;</button>
+        </div>
+        <div class="calc-button-row">
+          <button class="calc-btn">4</button>
+          <button class="calc-btn">5</button>
+          <button class="calc-btn">6</button>
+          <button class="calc-btn">&#8722;</button>
+        </div>
+        <div class="calc-button-row">
+          <button class="calc-btn">1</button>
+          <button class="calc-btn">2</button>
+          <button class="calc-btn">3</button>
+          <button class="calc-btn">&#43;</button>
+        </div>
+        <div class="calc-button-row">
+          <button class="calc-btn tripple">0</button>
+          <button class="calc-btn">&#61;</button>
+        </div>
+      </section>
     </div>
   </body>
 </html>
